# transform

./: .gitignore  README.md  attnres.py  chess_features.py  chess_model.py  codex_ideas.md  config.py  constrained.py  data.py  evaluate.py  label_positions.py  model.py  move_vocab.py  pyproject.toml  randopt.py  selfplay.py  setup.sh  train.py  train_action_value.py
.github/instructions/: transform.instructions.md
experiments/: exp003_diagnose_draws.py  exp004_encoding_compare.py  exp007_expert_iteration.py  exp007_sigma_sweep.py  exp008_board_encoder.py  exp009_learned_embeddings.py  exp010_unfreeze_layers.py  exp011_scale_data.py  exp012_stockfish_supervised.py  exp012b_quick_stockfish.py  exp013_action_value.py  exp013_hf_dataset_scale.py  exp014_full_hf_1epoch.py  exp014_mcts.py  exp015_lora.py  exp015_pooling_strategy.py  exp015b_last_token.py  exp015b_lora_hf.py  exp015c_pooling_probe.py  exp016_bidirectional.py  exp016_rich_features.py  exp017_scaling_law.py  exp018_lora_50k.py  exp019_spatial_head.py  exp020_scaled_spatial.py  exp021_search_lora.py  exp022_search.py  exp023_chess_transformer.py  exp024_scaled_chess_transformer.py  exp025_continue_training.py  exp026_relative_bias.py  exp027_depth_scaling.py  exp028_label_smoothing.py  exp029_data_diversity.py  exp030_depth_scaling.py  exp031_extended_training.py  exp032_continue_training.py  exp033_selfplay_reinforce.py  exp034_stockfish_distill.py  exp035_mixed_training.py  (+18 more)
outputs/exp013_hf_dataset_scale/: results.json
outputs/exp014_full_hf_1epoch/: results.json
outputs/exp018_lora_50k/: results.json
(+19 files in other folders)
